Ignoring log files

--- a/configuration/defaults.cfg
+++ b/configuration/defaults.cfg
@@ -1,22 +1,20 @@
 
 [db]
-host=bima-mentor.coic6imdwwxx.ap-south-1.rds.amazonaws.com
+host=localhost
 user=root
-password=Hellobima
+password=password
 database=allocator
-port=6603
+port=3306
 
+[allocation]
+welCalStatusToPick=0,4
+allocatingStatus=3
 assignCount=5
-
 role=2
 customerTable=bima_customer
 roleTable=bima_user_role_permission
 
 
-[allocation]
-welCalStatusToPick=0,4
-allocatingStatus=3
-
 [logging]
-errorLogFile=errorLogFile
-infoLogFile=infoLogFile
+logConfigFile=logging.conf
+appName=WelcomeCall Allocator
