--- a/configuration/config.cfg
+++ b/configuration/config.cfg
@@ -1,21 +1,22 @@
 
 [db]
-host=bima-mentor.coic6imdwwxx.ap-south-1.rds.amazonaws.com
+host=localhost
 user=root
-password=Hellobima
+password=Hello
 database=allocator
-port=6603
+port=3306
 
-assignCount=5
-
-role=2
-customerTable=bima_customer
-roleTable=bima_user_role_permission
 
 
 [allocation]
 welCalStatusToPick=0,4
 allocatingStatus=3
+assignCount=3
+role=2
+customerTable=bima_customer
+roleTable=bima_user_role_permission
+
 
 [logging]
 logConfigFile=logging.conf
+appName=WelcomeCall Allocator
