--- a/configuration/logging.conf
+++ b/configuration/logging.conf
@@ -1,6 +1,6 @@
 
 [loggers]
-keys=root,core,errorLogger
+keys=root
 
 [handlers]
 keys=coreHandler,errorHandler
@@ -12,30 +12,19 @@ keys=simpleFormatter
 level=DEBUG
 handlers=errorHandler,coreHandler
 
-[logger_core]
-level=DEBUG
-handlers=coreHandler
-qualname=core
-propagate=0
-
-[logger_errorLogger]
-level=ERROR
-handlers=errorHandler
-qualname=errorLogger
-propagate=0
-
 [handler_errorHandler]
 class=FileHandler
 level=ERROR
 formatter=simpleFormatter
-args=('errorLogFile.log', 'a')
+args=('errorFile.log', 'a')
+
 
 [handler_coreHandler]
 class=FileHandler
 level=DEBUG
 formatter=simpleFormatter
-args=('coreLogFile.log', 'a')
+args=('infoFile.log', 'a')
 
 [formatter_simpleFormatter]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s - %(exc_info)s
+format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 datefmt=
