--- a/configuration/logging.conf
+++ b/configuration/logging.conf
@@ -1,4 +1,3 @@
-
 [loggers]
 keys=root
 
@@ -11,6 +10,9 @@ keys=simpleFormatter
 [logger_root]
 level=DEBUG
 handlers=errorHandler,coreHandler
+logThreads=0
+logProcesses=0
+
 
 [handler_errorHandler]
 class=FileHandler
